2004-06-21  Richard Hult  <richard@imendio.com>

	* src/planner-property-dialog.c:
	* src/planner-property-dialog.h:
	* src/planner-property-model.h: Fix indentation and remove the
	possibility to select which columns to use (unsed and didn't
	work). Also apply patch from Lincoln to fix bug #141967.

	* src/planner-task-tree.c: Remove debug output.

2004-06-21 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-sql-plugin.c: change in planner_application_get_gconf_client
	that breaks CVS compile, detected by lincoln. Change to use the new API.

2004-06-19  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-resource.c (resource_set_property,
	resource_set_property): Reschedule when the resource calendar is
	modified and the resource has assignments. Also reschedule when
	the calendar is changed. Fixes bug #138159.

	* libplanner/mrp-project.c (mrp_project_reschedule): Force recalc,
	otherwise this won't do anything.

	* src/planner-resource-view.c: (resource_view_resource_notify_cb),
	(resource_view_resource_prop_changed_cb),
	(resource_view_resource_added_cb),
	(resource_view_resource_removed_cb):
	* src/planner-gantt-model.c: (gantt_model_connect_to_task_signals),
	(traverse_remove_subtree), (gantt_model_task_removed_cb),
	(gantt_model_task_notify_cb), (gantt_model_task_prop_changed_cb):
	* src/planner-task-tree.c: (task_tree_property_changed): Fix bug
	#142121, custom properties don't update correctly on undo/redo.

2004-06-19  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-tree.c (planner_ttable_tree_set_model)
	(ttable_tree_row_inserted): Fix bug #141117, tree and chart
	expansion gets out of sync.

2004-06-18  Richard Hult  <richard@imendio.com>

	* data/glade/task-dialog.glade:
	* src/planner-task-dialog.c: (planner_task_dialog_new): Remove the
	disabled option menus until we actually implement those parts.
	(task_dialog_connect_to_task): Use - instead of _ in notify signal
	names, fixes bug where the spinbutton wasn't updated.